--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,6 +12,8 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-theme.css" rel="stylesheet">
     <link href="css/hci-friends.css" rel="stylesheet">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -21,12 +23,12 @@
         {{#each friends}}
             <div class="friend">
                 <img class="img-responsive img-rounded" src={{imageURL}}></img>
-                <h3><a id="friendlink" href="#">{{name}}</a></h3>
+                <h3><a href="#">{{name}}</a></h3>
                 <p>{{description}}</p>
             </div>
         {{/each}}
 
-        <img src="http://lorempixel.com/500/500/people"></img>
+        <img class="img-responsive img-rounded" style="max-width: 300px" src="http://lorempixel.com/500/500/people"></img>
         <h3>Fake friend</h3>
         <p>All my friends are imaginary.</p>
 
